# wasmer

./: CHANGELOG.md  Cargo.toml
examples/parallel/src/: main.rs
fuzz/: Cargo.toml
lib/api/: Cargo.toml
lib/api/src/: ptr.rs
lib/c-api/: Cargo.toml
lib/cache/: Cargo.toml
lib/cli/: Cargo.toml
lib/clif-backend/: Cargo.toml
lib/compiler-cranelift/: Cargo.toml
lib/compiler-llvm/: Cargo.toml
lib/derive/: Cargo.toml
lib/emscripten/: Cargo.toml
lib/emscripten/src/: ptr.rs
lib/emscripten/src/env/unix/: mod.rs
lib/emscripten/src/syscalls/: mod.rs  unix.rs
lib/engine-native/src/: artifact.rs
lib/kernel-loader/: Cargo.toml
lib/llvm-backend/: Cargo.toml
lib/middleware-common/: Cargo.toml
lib/middlewares/: Cargo.toml
lib/runtime/: Cargo.toml
lib/runtime-c-api/: Cargo.toml
lib/runtime-core/: Cargo.toml
lib/runtime-core/src/memory/: ptr.rs
lib/singlepass-backend/: Cargo.toml
lib/wasi/: Cargo.toml
lib/wasi-experimental-io-devices/: Cargo.toml
lib/wasi/src/: ptr.rs
lib/wasi/src/syscalls/: mod.rs
lib/wasi/src/syscalls/legacy/: snapshot0.rs
lib/wasi/src/syscalls/unix/: mod.rs
lib/win-exception-handler/: Cargo.toml
tests/lib/wast/: Cargo.toml
