[package]
name = "wasmer-middleware-common"
version = "0.16.2"
repository = "https://github.com/wasmerio/wasmer"
description = "Wasmer runtime common middlewares"
license = "MIT"
authors = ["The Wasmer Engineering Team <engineering@wasmer.io>"]
keywords = ["wasm", "webassembly", "middleware", "metering"]
categories = ["wasm"]
edition = "2018"

[dependencies]
wasmer-runtime-core = { package = "wasmer-runtime-core-asml-fork", path = "../runtime-core", version = "0.1.1" }
